# swagger-spec.json
@@ -65,6 +65,36 @@
         ]
       }
     },
+    "/auth/google": {
+      "get": {
+        "operationId": "AuthController_googleAuth",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "구글 소셜 로그인 시작",
+        "tags": [
+          "인증 (Auth)"
+        ]
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "operationId": "AuthController_googleAuthRedirect",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "구글 소셜 로그인 콜백 및 토큰 발급",
+        "tags": [
+          "인증 (Auth)"
+        ]
+      }
+    },
     "/post": {
       "post": {
         "operationId": "PostController_create",
@@ -219,7 +249,7 @@
         "properties": {
           "email": {
             "type": "string",
-            "example": "inforteam@gmail.com"
+            "example": "infoteam@gmail.com"
           },
           "name": {
             "type": "string",
